Bug 1475387 - Port bug 1472087: Replace use of nsIDocShellLoadInfo. rs=bustage-fix