mailnews/news/src/nsNntpService.cpp
@@ -22,7 +22,8 @@
 #include "nsIMsgAccountManager.h"
 #include "nsINntpIncomingServer.h"
 #include "nsIDocShell.h"
-#include "nsIDocShellLoadInfo.h"
+#include "mozilla/net/ReferrerPolicy.h"
+#include "nsDocShellLoadInfo.h"
 #include "mozIDOMWindow.h"
 #include "nsIMsgSearchSession.h"
 #include "nsMailDirServiceDefs.h"
@@ -305,14 +306,14 @@ nsresult nsNntpService::GetMessageFromUrl(nsIURI *aUrl,
   nsCOMPtr<nsIDocShell> docShell(do_QueryInterface(aDisplayConsumer, &rv));
   if (NS_SUCCEEDED(rv))
   {
-    nsCOMPtr<nsIDocShellLoadInfo> loadInfo;
+    RefPtr<nsDocShellLoadInfo> loadInfo;
     // DIRTY LITTLE HACK --> if we are opening an attachment we want the docshell to
     // treat this load as if it were a user click event. Then the dispatching stuff will be much
     // happier.
     if (mOpenAttachmentOperation)
     {
-      docShell->CreateLoadInfo(getter_AddRefs(loadInfo));
-      loadInfo->SetLoadType(nsIDocShellLoadInfo::loadLink);
+      loadInfo = new nsDocShellLoadInfo();
+      loadInfo->SetLoadType(LOAD_LINK);
     }
 
     rv = docShell->LoadURI(aUrl, loadInfo, nsIWebNavigation::LOAD_FLAGS_NONE, false);
@@ -446,9 +447,8 @@ NS_IMETHODIMP nsNntpService::OpenAttachment(const char *aContentType,
     nsCOMPtr<nsIDocShell> docShell(do_QueryInterface(aDisplayConsumer, &rv));
     if (NS_SUCCEEDED(rv) && docShell)
     {
-      nsCOMPtr<nsIDocShellLoadInfo> loadInfo;
-      docShell->CreateLoadInfo(getter_AddRefs(loadInfo));
-      loadInfo->SetLoadType(nsIDocShellLoadInfo::loadLink);
+      RefPtr<nsDocShellLoadInfo> loadInfo = new nsDocShellLoadInfo();
+      loadInfo->SetLoadType(LOAD_LINK);
       return docShell->LoadURI(url, loadInfo, nsIWebNavigation::LOAD_FLAGS_NONE, false);
     }
     else
